--- a/public/css/style.css
+++ b/public/css/style.css
@@ -297,6 +297,6 @@
     text-align: end;
 }
 
-.test-hill {
+.mul-selec-table-tab {
     overflow-x: auto;
 }
